force-app/main/default/objects/Survey_Invitation__c/Survey_Invitation__c.object-meta.xml
<CustomObject>
    <label>Survey Invitation</label>
    <nameField>
        <displayFormat>SI-{0000000}</displayFormat>
        <label>Survey Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>