force-app/main/default/objects/Survey_Invitation__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>