force-app/main/default/objects/Survey_Invitation__c/fields/Days_before_First_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Days_before_First_Reminder__c</fullName>
    <label>Days before First Reminder</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>