force-app/main/default/objects/Survey_Invitation__c/fields/Days_between_two_reminders__c.field-meta.xml
<CustomField>
    <fullName>Days_between_two_reminders__c</fullName>
    <label>Days between two reminders</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>