force-app/main/default/objects/Survey_Invitation__c/fields/Form_Renderer_Page_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Form_Renderer_Page_Base_Url__c</fullName>
    <description>Form Renderer Page Base Url</description>
    <inlineHelpText>Form Renderer Page Base Url</inlineHelpText>
    <label>Form Renderer Page Base Url</label>
    <type>Url</type>
</CustomField>