force-app/main/default/objects/Survey_Invitation__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inspection record for which this invitation is send</description>
    <inlineHelpText>Inspection record for which this invitation is send</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>