force-app/main/default/objects/Survey_Invitation__c/fields/Kinetic_Form__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kinetic Form</label>
    <referenceTo>Kinetic_Form__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>