force-app/main/default/objects/Survey_Invitation__c/fields/Kinetic_Job__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Job__c</fullName>
    <label>Kinetic Job</label>
    <referenceTo>Kinetic_Job__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>