force-app/main/default/objects/Survey_Invitation__c/fields/PageUrl__c.field-meta.xml
<CustomField>
    <fullName>PageUrl__c</fullName>
    <formula>IF( ISNULL(Form_Renderer_Page_Base_Url__c), 
IF(CONTAINS($Setup.FieldKo_Kinetics_Setting__c.Form_Renderer_Page_URL__c, &apos;?&apos;),  ($Setup.FieldKo_Kinetics_Setting__c.Form_Renderer_Page_URL__c &amp; &apos;&amp;seqnum=&apos; &amp;  GUID__c), ($Setup.FieldKo_Kinetics_Setting__c.Form_Renderer_Page_URL__c &amp; &apos;?seqnum=&apos; &amp;  GUID__c)),
IF(CONTAINS(Form_Renderer_Page_Base_Url__c, &apos;?&apos;),  (Form_Renderer_Page_Base_Url__c &amp; &apos;&amp;seqnum=&apos; &amp;  GUID__c), (Form_Renderer_Page_Base_Url__c &amp; &apos;?seqnum=&apos; &amp;  GUID__c)))</formula>
    <label>PageUrl</label>
    <type>Text</type>
</CustomField>