force-app/main/default/objects/Survey_Invitation__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Recipient Email for Sending Email</description>
    <inlineHelpText>Recipient Email for Sending Email</inlineHelpText>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>