force-app/main/default/objects/Survey_Invitation__c/fields/Recipient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Last_Name__c</fullName>
    <description>Recipient Last Name for Sms or Email</description>
    <inlineHelpText>Recipient Last Name for Sms or Email</inlineHelpText>
    <label>Recipient Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>