force-app/main/default/objects/Survey_Invitation__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Recipient First Name for SMS or Email</description>
    <inlineHelpText>Recipient First Name for SMS or Email</inlineHelpText>
    <label>Recipient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>