force-app/main/default/objects/Survey_Invitation__c/fields/Recipient_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Number__c</fullName>
    <description>Recipient Number for Sending SMS</description>
    <inlineHelpText>Recipient Number for Sending SMS</inlineHelpText>
    <label>Recipient Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>