force-app/main/default/objects/Survey_Invitation__c/fields/Reminder_Sent_count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_count__c</fullName>
    <label>Reminder Sent count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>