force-app/main/default/objects/Survey_Invitation__c/fields/Send_Auto_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Send_Auto_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Auto Reminders</label>
    <type>Checkbox</type>
</CustomField>