force-app/main/default/objects/Survey_Invitation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to recipient</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>