force-app/main/default/objects/Survey_Invitation__c/fields/TTL_Day__c.field-meta.xml
<CustomField>
    <fullName>TTL_Day__c</fullName>
    <label>TTL (Day)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>